# HaloDaemon

./: .gitignore  CLAUDE.md  README.md  REUSE.toml  flake.nix
src/: Cargo.toml  about.toml  about_licenses.hbs
src/.cargo/: config.toml  mutants.toml
src/assets/fonts/: JetBrainsMono-Regular-LICENSE.txt
src/broker/: Cargo.toml
src/broker/src/: clientauth.rs  log_file.rs  main.rs  pipe.rs  server.rs  service.rs
src/daemon/: Cargo.toml  build.rs
src/daemon/assets/: NotoSans-Regular-LICENSE.txt
src/daemon/src/: audio.rs  constants.rs  elevation.rs  lifecycle.rs  logger.rs  main.rs  notify.rs  run_loop.rs  state.rs  task_supervisor.rs  test_support.rs
src/daemon/src/application/: lifecycle.rs  mod.rs  notifications.rs  run_loop.rs  task_supervisor.rs
src/daemon/src/application/bus/: coordinator.rs  data_bus.rs  mod.rs  projections.rs
src/daemon/src/application/ipc/: mod.rs  router.rs
src/daemon/src/application/observers/: computer.rs  hid.rs  mod.rs  usb_hotplug.rs
src/daemon/src/application/state/: config_repository.rs  device_registry.rs  mod.rs  persistence.rs  workers.rs
src/daemon/src/application/usecases/: mod.rs
src/daemon/src/config/: mod.rs
src/daemon/src/cooling/: config.rs  fan_curve.rs  mod.rs  state.rs
src/daemon/src/cooling/usecases/: failsafe.rs  fan_curve.rs  mod.rs  runtime.rs
src/daemon/src/discovery/: mod.rs
src/daemon/src/domain/: mod.rs
src/daemon/src/domain/cooling/: mod.rs  model.rs  projection.rs  state.rs
src/daemon/src/domain/device/: capabilities.rs  chain.rs  lighting_segment.rs  mod.rs  projection.rs  slots.rs  traits.rs
src/daemon/src/domain/events/: mod.rs
src/daemon/src/domain/input/: event_bus.rs  mod.rs  state.rs
src/daemon/src/domain/lcd/: mod.rs  projection.rs  state.rs
src/daemon/src/domain/lighting/: mod.rs  model.rs  projection.rs  state.rs
src/daemon/src/domain/plugin/: mod.rs  plugin_test.rs  projection.rs  recommend.rs  release_source.rs  repo.rs  scan.rs  tests.rs
src/daemon/src/domain/profiles/: device_state.rs  mod.rs  model.rs  projection.rs  state.rs  validate.rs
src/daemon/src/domain/registry/: identity.rs  mod.rs  model.rs  state.rs
src/daemon/src/drivers/: capabilities.rs  chain.rs  lighting_segment.rs  mod.rs  rate_limit.rs  slots.rs
src/daemon/src/drivers/plugins/: audio_api.rs  (+32 more)
src/daemon/src/engines/: action_executor.rs  fan_curve.rs  key_remap.rs  mod.rs
src/daemon/src/infrastructure/: integration_discovery.rs  mod.rs
src/daemon/src/input/: action_executor.rs  key_remap.rs  mod.rs  state.rs  validate.rs
src/daemon/src/ipc/: mod.rs  router.rs  serializer.rs
src/daemon/src/lcd/: mod.rs  state.rs
src/daemon/src/lighting/: config.rs  mod.rs  state.rs
src/daemon/src/platform/: elevation.rs  env.rs  mod.rs  notify.rs  service.rs  win32.rs
src/daemon/src/plugin/: integration_monitor.rs  integration_scan.rs  mod.rs  plugin_test.rs  recommend.rs  repo.rs  tests.rs
src/daemon/src/profiles/: config.rs  device_state.rs  mod.rs  state.rs  validate.rs
src/daemon/src/registry/: config.rs  discovery.rs  identity.rs  mod.rs  snapshot.rs  state.rs
src/daemon/src/secrets/: file_store.rs  keyring_store.rs  mod.rs
src/daemon/src/service/: mod.rs
src/daemon/src/services/: data_bus.rs  effective_state.rs  integration_discovery.rs  low_battery.rs  mod.rs  plugin_data_status.rs  topic_producers.rs
src/daemon/src/state/: device_registry.rs  mod.rs  persistence.rs  workers.rs
src/daemon/src/usecases/: action.rs  app_rules.rs  boolean.rs  canvas.rs  chain.rs  choice.rs  debug.rs  dpi.rs  equalizer.rs  fan.rs  fan_curve.rs  key_remap.rs  lcd.rs  lcd_engine.rs  mod.rs  onboard_profiles.rs  profiles.rs  range.rs  registration.rs  rename.rs  rgb.rs  settings.rs  visibility.rs
src/daemon/src/util/: effect_params.rs  fs.rs  image.rs  json.rs  mod.rs  time.rs
src/hwaccess/: Cargo.toml
src/hwaccess/src/: lib.rs  pawnio.rs  proto.rs  winsec.rs
src/hwaccess/src/smbus/: fallback.rs  mod.rs
src/plugin-signing/: Cargo.toml
src/plugin-signing/src/: lib.rs  main.rs
src/protocol/: Cargo.toml
src/protocol/src/: commands.rs  debug_info.rs  frames.rs  keyboard.rs  lib.rs  socket.rs  types.rs  zone_transform.rs
src/shared/: Cargo.toml
src/shared/src/: app.rs  bus.rs  capability.rs  commands.rs  curve.rs  debug_info.rs  effect_designer.rs  frames.rs  keyboard.rs  keycodes.rs  lcd_custom.rs  lcd_geometry.rs  lib.rs  lifecycle.rs  socket.rs  system_fonts.rs  types.rs  zone_transform.rs
src/ui/: Cargo.toml  build.rs  style.css
src/ui/assets/icons/: periphctl-icons.gresource.xml
src/ui/locales/: canvas.en.yaml  depcheck.en.yaml  depcheck.it.yaml  device.it.yaml  devtabs.en.yaml  devtabs.it.yaml  en.yaml  home.en.yaml  home.it.yaml  integrations.en.yaml  integrations.it.yaml  it.yaml  lcd.en.yaml  lcd.it.yaml  lighting.en.yaml  lighting.it.yaml  misc.en.yaml  misc.it.yaml  model.en.yaml  model.it.yaml  plugins.en.yaml  plugins.it.yaml  profile.en.yaml  profile.it.yaml  settings.en.yaml  settings.it.yaml  shell.en.yaml  shell.it.yaml  tour.en.yaml
src/ui/locales/en/: canvas.en.yaml  cooling.en.yaml  depcheck.en.yaml  device.en.yaml  devtabs.en.yaml  en.yaml  home.en.yaml  integrations.en.yaml  lcd.en.yaml  lighting.en.yaml  misc.en.yaml  model.en.yaml  plugins.en.yaml  profile.en.yaml  settings.en.yaml  shell.en.yaml  tour.en.yaml
src/ui/locales/it/: canvas.it.yaml  cooling.it.yaml  depcheck.it.yaml  device.it.yaml  devtabs.it.yaml  home.it.yaml  integrations.it.yaml  it.yaml  lcd.it.yaml  lighting.it.yaml  misc.it.yaml  model.it.yaml  plugins.it.yaml  profile.it.yaml  settings.it.yaml  shell.it.yaml  tour.it.yaml
src/ui/src/: app.rs  commands.rs  main.rs  screenshots.rs  service.rs  state.rs  store.rs  svg.rs
src/ui/src/domain/: battery_notification.rs  mod.rs  native_notification.rs  topic_store.rs
src/ui/src/ipc/: client.rs  mod.rs
src/ui/src/runtime/: ipc.rs  mod.rs  single_instance.rs  wayland_hide.rs
src/ui/src/tray/: linux.rs  mod.rs  windows.rs
src/ui/src/ui/: capability_registry.rs  icons.rs  main_window.rs  mod.rs  root.rs  sidebar.rs  theme.rs  tour.rs
(+675 files in other folders)
