[workspace]
members = ["protocol", "daemon", "ui"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/TimP4w/Halod"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
log        = "0.4"
async-trait = "0.1"
