[workspace]
members = ["shared", "hwaccess", "broker", "daemon", "ui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/TimP4w/Halod"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
anyhow     = "1"
log        = "0.4"
async-trait = "0.1"

# Lint policy so CI can gate on `cargo clippy -- -D warnings`. A few categories
# are intentionally relaxed:
#   - dead_code: vendor/protocol scaffolding (constants, alt accessors, future
#     device hooks) is deliberately kept even when not yet wired up.
#   - type_complexity / too_many_arguments: closure-heavy UI state and driver
#     builders legitimately carry complex signatures; factoring them hurts clarity.
[workspace.lints.rust]
dead_code = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
# Opinionated style/formatting lints kept off so the gate stays focused on
# substantive issues: nested `mod tests` followed by sibling code, protocol enums
# whose variants share a natural prefix (WriteByte/WriteBlock…), and doc-comment
# list indentation.
items_after_test_module = "allow"
enum_variant_names = "allow"
doc_lazy_continuation = "allow"
