[workspace]
members = ["shared", "hwaccess", "broker", "daemon", "ui", "plugin-signing"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/TimP4w/Halod"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
semver     = "1"
anyhow     = "1"
log        = "0.4"
async-trait = "0.1"

[workspace.lints.clippy]
# Opinionated style/formatting lints kept off so the gate stays focused on
# substantive issues: nested `mod tests` followed by sibling code, protocol enums
# whose variants share a natural prefix (WriteByte/WriteBlock…), and doc-comment
# list indentation.
items_after_test_module = "allow"
enum_variant_names = "allow"
doc_lazy_continuation = "allow"
# Closure-heavy UI callbacks and driver/builder signatures legitimately carry
# many parameters and complex closure types; kept off so the gate stays on
# substantive issues (see the lint policy in CLAUDE.md).
too_many_arguments = "allow"
type_complexity = "allow"
