[package]
name = "halod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "halod"
path = "src/main.rs"

[dependencies]
halod-protocol = { path = "../protocol" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow     = { workspace = true }
log        = { workspace = true }
async-trait = { workspace = true }
env_logger = "0.11"
hidapi     = "2"
inventory  = "0.3"
rusb       = { version = "0.9" }
uuid       = { version = "1", features = ["v4"] }
base64     = "0.22"
image      = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
gif        = "0.14"
# Q565 — QOI-derived RGB565 codec. The NZXT Kraken type-0x08 LCD streaming path
# expects frames in this format (verified against NZXT CAM USB captures).
q565       = { git = "https://github.com/seritools/q565", rev = "aeb432dc7d73757b20cd45b71755e8573a978541" }
imageproc  = { version = "0.25", default-features = false }
ab_glyph   = "0.2"
tiny-skia = "0.11"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["test-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = { version = "0.8", features = ["tokio_socket"] }
libc = "0.2"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
pipewire = "0.8"
evdev = "0.12"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[target.'cfg(target_os = "windows")'.dependencies.enigo]
version = "0.2"
default-features = false

[target.'cfg(target_os = "windows")'.dependencies]
wmi        = "0.13"
windows    = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# SCM dispatcher + service install/uninstall/stop for the supervisor service.
windows-service = "0.7"
libloading = "0.8"
