# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "halod-hwaccess"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw privileged register-bus primitives (SMBus, PawnIO) shared by the daemon and the elevated broker"

[lints]
workspace = true

[dependencies]
anyhow     = { workspace = true }
log        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "windows")'.dependencies]
wmi        = "0.18.4"
libloading = "0.9.0"
windows    = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
