[package]
name = "halod-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fontdb     = "0.23.0"
serde      = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
proptest = "1.11.0"
