# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "halod-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
screenshots = ["dep:egui_kittest"]

[dependencies]
halod-shared = { path = "../shared" }

# glow (OpenGL) renderer, not the default wgpu — matches the Linux custom
# event loop (egui_glow) and works without Vulkan.
eframe = { version = "0.35.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
] }
egui = "0.35.0"

tokio = { version = "1.53.1", features = ["rt", "net", "io-util", "time", "macros", "sync"] }
serde = "1.0.229"
serde_json = "1.0.151"
serde_yaml = "0.9.34"
anyhow = "1.0.104"
log = "0.4.33"
env_logger = "0.11.11"
rfd = "0.17.2"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif"] }
base64 = "0.22.1"
resvg = "0.47.0"
rust-i18n = "4.2.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
webbrowser = "1.2.1"

[target.'cfg(unix)'.dependencies]
ksni = { version = "0.3.6", features = ["blocking"] }

# Linux "close to tray" quirk (see wayland_hide.rs): a custom winit + glutin +
# egui_glow event loop that destroys/recreates the window, because winit's
# Wayland backend can't hide a surface. Remove this whole block (and the module)
# once eframe/winit support hiding a Wayland window natively.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
winit = { version = "0.30.13", default-features = false, features = ["wayland", "rwh_06"] }
glutin = "0.32.3"
glutin-winit = "0.5.0"
glow = "0.18.0"
egui_glow = { version = "0.35.0", default-features = false, features = ["winit", "wayland"] }
zbus = "5.18.0"
# Headless egui harness for the screenshot generators (ui/src/screenshots.rs);
# `wgpu` renders frames to PNG without a window.
egui_kittest = { version = "0.35.0", default-features = false, features = [
    "wgpu",
], optional = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.24.1"
# HKCU Run-key autostart entry (ui/src/lifecycle/autostart/windows.rs).
windows = { version = "0.62.2", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

[target.'cfg(windows)'.build-dependencies]
# Embeds assets/icon.ico as the exe's Win32 icon resource so Windows shows the
# app icon in Explorer, the taskbar, the Start Menu shortcut, and the installer.
winresource = "0.1.31"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
